--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ img {
 input,
 button,
 textarea {
-    font: inherit
+    font: inherit;
 }
 
 /* || VARIABLES */
@@ -111,7 +111,7 @@ p {
 }
 
 a:any-link {
-    color: var(--link-color)
+    color: var(--link-color);
 }
 
 a:hover,
@@ -120,7 +120,7 @@ a:focus-visible {
 }
 
 a:active {
-    color: var(--link-active)
+    color: var(--link-active);
 }
 
 /* ||HEADER */
@@ -154,38 +154,58 @@ a:active {
 }
 
 /*||hero */
-.hero{
-    position:relative
+.hero {
+    position: relative;
 }
 
-.hero__h2{
-    background-color:var(--hero-bgcolor) ;
-    color:var(--hero-color) ;
+.hero__h2 {
+    background-color: var(--hero-bgcolor);
+    color: var(--hero-color);
     padding: 0.25em 0.5em;
     letter-spacing: 0.1rem;
     text-shadow: 2px 2px 5px var(--border-color);
     position: absolute;
     top: -100px;
-    left:20px;
-animation:shadowWelcome 0.5s
-ease-in-out 1s forwards;
+    left: 20px;
+    animation: shadowWelcome 0.5s ease-in-out 1s forwards;
 }
 
-@keyframes showWelcome{
-    0%{
+@keyframes showWelcome {
+    0% {
         top: -20px;
-        transform: skew(0deg, -5deg)
-       scaleY(0);
+        transform: skew(0deg, -5deg) scaleY(0);
     }
-        80% {
-            top:30px;
-            transform: skew(10deg, -5deg)
-            scaleY(1.2);
-        }
-100%{
-    top: 20px;
-    transform: skew(-10deg, -5deg)
-    scaleY(1)
-    
+
+    80% {
+        top: 30px;
+        transform: skew(10deg, -5deg) scaleY(1.2);
     }
+
+    100% {
+        top: 20px;
+        transform: skew(-10deg, -5deg) scaleY(1)
+    }
+}
+
+/* || FOOTER */
+
+.footer {
+    position: sticky;
+    bottom: 0;
+    background-color: var(--header-bgcolor);
+    color: var(--header-color);
+    padding: var(--padding-tb) var(--padding-side);
+    text-align: center;
+}
+
+/* || MAIN */
+
+.main {
+    padding: var(--padding-tb) var (--padding-side);
+}
+
+.main__article {
+    scroll-margin-top: 6.5rem;
+    margin: var(--margin);
+
 }
