--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ a:active {
 
     100% {
         top: 20px;
-        transform: skew(-10deg, -5deg) scaleY(1)
+        transform: skew(-10deg, -5deg) scaleY(1);
     }
 }
 
@@ -207,5 +207,56 @@ a:active {
 .main__article {
     scroll-margin-top: 6.5rem;
     margin: var(--margin);
+}
 
+.main__article:first-child {
+    margin-top: 1em;
+}
+
+.main__article:last-child {
+    min-height: calc(100vh - 20rem);
+}
+
+/* || ABOUT */
+
+.about__trivia {
+    margin: var(--margin);
+}
+
+.about__trivia-answer {
+    margin-top: 1em;
+}
+
+/* || CONTACT */
+
+.contact__h2 {
+    margin: 0;
+}
+
+.contact__fieldset {
+    border: none;
+}
+
+.contact__p {
+    margin: 1em 0;
+}
+
+.contact__label {
+    display: block;
+    font-weight: bold;
+}
+
+.contact__input,
+.contact__textarea {
+    padding: 0.5em;
+    border-radius: 15px;
+    border-width: 2px;
+    width: 100%;
+}
+
+.contact__button {
+    padding: 0.5em;
+    border-radius: 15px;
+    background-color: var(--HIGHLIGHT-COLOR);
+    color: var(--header-color)
 }
