--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ textarea {
     --hero-color: #fff;
 
     /* BORDERS */
-    --BORDERS: 1px solid var(--border-color);
+    --BORDERS: 1px solid  var(--border-color);
+    --BORDERS-RADIUS: 15px;
     /* STANDARD PADDING */
     --padding-tb: 0.25em;
     --padding-side: 2, 5%;
@@ -205,7 +206,7 @@ a:active {
 }
 
 .main__article {
-    scroll-margin-top: 6.5rem;
+    scroll-margin-top: 6.5em;
     margin: var(--margin);
 }
 
@@ -227,7 +228,7 @@ a:active {
     margin-top: 1em;
 }
 
-/* || CONTACT */
+/* ||CONTACT */
 
 .contact__h2 {
     margin: 0;
@@ -249,14 +250,99 @@ a:active {
 .contact__input,
 .contact__textarea {
     padding: 0.5em;
-    border-radius: 15px;
+    border-radius: var(--BORDERS-RADIUS);
     border-width: 2px;
     width: 100%;
 }
 
 .contact__button {
     padding: 0.5em;
-    border-radius: 15px;
+    border-radius: var(--BORDERS-RADIUS);
     background-color: var(--HIGHLIGHT-COLOR);
-    color: var(--header-color)
+    color: var(--header-color);
+}
+
+/* || MENU */
+
+thead,
+tbody,
+tfoot,
+tr {
+    display: contents;
+}
+
+.menu__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+        "hd1 hd2 hd3"
+        "cr cr1 cr1p"
+        "cr cr2 cr2p"
+        "cr cr3 cr3p"
+        "sf sf1 sf1p"
+        "sf sf2 sf2p"
+        "sf sf3 sf3p"
+        "cs cs cs";
+    gap: 0.1em;
+    margin-bottom: 1em;
+}
+
+.menu__cr {
+    grid-area: cr;
+}
+
+.menu__sf {
+    grid-area: sf;
+}
+
+.menu__cs {
+    grid-area: cs;
+    
+}
+
+.menu__cr,
+.menu_-sf,
+.menu__cs
+.menu__header{
+    font-weight: bold;
+    height: 100%;
+    display: grid;
+    place-content: center;
+}
+
+.menu__header{
+    border-bottom: var(--BORDERS);
+}
+
+.menu__header, .menu__item{
+    width: 100%;
+    padding: 1em;
+    border: medium ridge var(--border-color);
+}
+
+.menu__item{
+    display:grid;
+    place-content: center;
+}
+
+thead th:first-child{
+    border-top-left-radius:var(--BORDERS-RADIUS)
+}
+
+thead th:last-child{
+    border-top-right-radius:var(--BORDERS-RADIUS)
+}
+
+.tfoot td{
+border-botton-left-radius:var(--BORDERS-RADIUS);
+border-button-right-radius:var(--BORDERS-RADIUS)
+}
+
+@media screen and (min-width: 576px){
+    .header__h1::before{
+        content:""
+    }
+    .header__h1::after{
+        content: ""
+    }
 }
